--- a/index.html
+++ b/index.html
@@ -3,15 +3,33 @@
   <head>
     <meta charset="utf-8"/>
     <title>Lab 2</title>
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <meta charset="utf-8">
   </head>
   <body>
-    
-    <h1>Lab 2</h1>
 
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div id = "topstuff">
+        <a class="navbar-brand" href="#"> GET YO WEATHER  <h7> (Please enter a U.S city)  </h7> </a>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <form class="form-inline my-2 my-lg-0">
+          <input id="weatherInput" type="text"></input><br/>
+          <button class="btn btn-outline-success my-2 my-sm-0" id="weatherSubmit" type="submit">Search</button>
+        </form>
+      </div>
+    </div>
+  </nav>
+
+  <div id="weatherResults">
+  </div>
+
+  <div id="forecastResults">
+	</div>
+  
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js" integrity="sha256-4iQZ6BVL4qNKlQ27TExEhBN1HFPvAvAMbFavKKosSWQ=" crossorigin="anonymous"></script>
-    <script text="type/javascript" src="./script.js">
-    </script>
+    <script text="type/javascript" src="script.js"> </script>
 
   </body>
 </html>
